; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_SHAPE_ContextualShaping.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_SHAPE_ContextualShaping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (i32, i32*, %struct.TYPE_5__*, i32*, i32, i32*, i32*, i32, i32*)* }
%struct.TYPE_5__ = type { i64 }

@ShapingData = common dso_local global %struct.TYPE_6__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SHAPE_ContextualShaping(i32 %0, i32* %1, %struct.TYPE_5__* %2, i32* %3, i32 %4, i32* %5, i32* %6, i32 %7, i32* %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_5__*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32*, align 8
  store i32 %0, i32* %10, align 4
  store i32* %1, i32** %11, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32* %5, i32** %15, align 8
  store i32* %6, i32** %16, align 8
  store i32 %7, i32* %17, align 4
  store i32* %8, i32** %18, align 8
  %19 = load i32, i32* %10, align 4
  %20 = load i32*, i32** %11, align 8
  %21 = call i32 @load_ot_tables(i32 %19, i32* %20)
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** @ShapingData, align 8
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i64 %25
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load i32 (i32, i32*, %struct.TYPE_5__*, i32*, i32, i32*, i32*, i32, i32*)*, i32 (i32, i32*, %struct.TYPE_5__*, i32*, i32, i32*, i32*, i32, i32*)** %27, align 8
  %29 = icmp ne i32 (i32, i32*, %struct.TYPE_5__*, i32*, i32, i32*, i32*, i32, i32*)* %28, null
  br i1 %29, label %30, label %48

30:                                               ; preds = %9
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** @ShapingData, align 8
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i64 %34
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = load i32 (i32, i32*, %struct.TYPE_5__*, i32*, i32, i32*, i32*, i32, i32*)*, i32 (i32, i32*, %struct.TYPE_5__*, i32*, i32, i32*, i32*, i32, i32*)** %36, align 8
  %38 = load i32, i32* %10, align 4
  %39 = load i32*, i32** %11, align 8
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %41 = load i32*, i32** %13, align 8
  %42 = load i32, i32* %14, align 4
  %43 = load i32*, i32** %15, align 8
  %44 = load i32*, i32** %16, align 8
  %45 = load i32, i32* %17, align 4
  %46 = load i32*, i32** %18, align 8
  %47 = call i32 %37(i32 %38, i32* %39, %struct.TYPE_5__* %40, i32* %41, i32 %42, i32* %43, i32* %44, i32 %45, i32* %46)
  br label %48

48:                                               ; preds = %30, %9
  ret void
}

declare dso_local i32 @load_ot_tables(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
